logs/validate.20260408-120141.log
Mode: isolate
Isolate: including Chap39 Chap18 Chap02
error[E0425]: cannot find function `view_ord_consistent` in this scope
  --> src/Chap39/BSTSetTreapMtEph.rs:74:61
   |
74 |             requires vstd::laws_cmp::obeys_cmp_spec::<T>(), view_ord_consistent::<T>(),
   |                                                             ^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
   |

error[E0425]: cannot find function `view_ord_consistent` in this scope
  --> src/Chap39/BSTSetTreapMtEph.rs:87:61
   |
87 |             requires vstd::laws_cmp::obeys_cmp_spec::<T>(), view_ord_consistent::<T>(),
   |                                                             ^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
   |

error[E0425]: cannot find function `view_ord_consistent` in this scope
  --> src/Chap39/BSTSetTreapMtEph.rs:94:61
   |
94 |             requires vstd::laws_cmp::obeys_cmp_spec::<T>(), view_ord_consistent::<T>(),
   |                                                             ^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
   |

error[E0425]: cannot find function `view_ord_consistent` in this scope
  --> src/Chap39/BSTSetTreapMtEph.rs:99:61
   |
99 |             requires vstd::laws_cmp::obeys_cmp_spec::<T>(), view_ord_consistent::<T>(),
   |                                                             ^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
   |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:107:61
    |
107 |             requires vstd::laws_cmp::obeys_cmp_spec::<T>(), view_ord_consistent::<T>(),
    |                                                             ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:117:17
    |
117 |                 view_ord_consistent::<T>(),
    |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:125:17
    |
125 |                 view_ord_consistent::<T>(),
    |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:133:17
    |
133 |                 view_ord_consistent::<T>(),
    |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:141:17
    |
141 |                 view_ord_consistent::<T>(),
    |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:149:17
    |
149 |                 view_ord_consistent::<T>(),
    |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:155:61
    |
155 |             requires vstd::laws_cmp::obeys_cmp_spec::<T>(), view_ord_consistent::<T>(),
    |                                                             ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:173:17
    |
173 |                 view_ord_consistent::<T>(),
    |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:185:17
    |
185 |                 view_ord_consistent::<T>(),
    |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:202:17
    |
202 |                 view_ord_consistent::<T>(),
    |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:221:17
    |
221 |                 view_ord_consistent::<T>(),
    |                 ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:227:61
    |
227 |             requires vstd::laws_cmp::obeys_cmp_spec::<T>(), view_ord_consistent::<T>(),
    |                                                             ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:241:57
    |
241 |         requires vstd::laws_cmp::obeys_cmp_spec::<T>(), view_ord_consistent::<T>(),
    |                                                         ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `view_ord_consistent` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:265:57
    |
265 |         requires vstd::laws_cmp::obeys_cmp_spec::<T>(), view_ord_consistent::<T>(),
    |                                                         ^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::view_ord_consistent;
    |

error[E0425]: cannot find function `lemma_cmp_antisymmetry` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:355:21
    |
355 |                     lemma_cmp_antisymmetry(o, kref);
    |                     ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_antisymmetry;
    |

error[E0425]: cannot find function `lemma_cmp_transitivity` in this scope
   --> src/Chap39/BSTSetTreapMtEph.rs:356:21
    |
356 |                     lemma_cmp_transitivity(s, kref, o);
    |                     ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 25 +     use crate::Chap39::BSTTreapSpecsAndLemmas::BSTTreapSpecsAndLemmas::lemma_cmp_transitivity;
    |

error: aborting due to 20 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 2935MB, peak z3 RSS: 0MB, min free: 21014MB
Sampled CPU Usage: rust_verify: 7s, z3 children: 0s
